--- a/README
+++ b/README
@@ -31,8 +31,19 @@ Gimp will auto-straighten ("deskew") the image.
 Installation
 ============
 
-To build and install it, just ...
+Building/installation procedure depends on where you got the source code from.
+
+If you got source code from Git repository,
+
+	./autogen.sh
+	make
+	make install
+
+If you got a tarball with a version,
 
 	./configure
 	make
 	make install
+
+For both ./autogen.sh and ./configure you can use --prefix=INSTALL_PATH, where 
+a typical installation path is /usr. By default /usr/local is used.
