--- a/po/ru.po
+++ b/po/ru.po
@@ -3,23 +3,25 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # Александр Прокудин <alexandre.prokoudine@gmail.com>, 2010.
+# Alexandre Prokoudine <alexandre.prokoudine@gmail.com>, 2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gimp deskew plugin 1.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-12-03 00:56+0300\n"
-"PO-Revision-Date: 2010-12-03 00:56+0300\n"
-"Last-Translator: Александр Прокудин <alexandre.prokoudine@gmail.com>\n"
-"Language-Team: Russian <gnome-cyr@lists.gnome.org>\n"
+"POT-Creation-Date: 2019-01-23 04:23+0300\n"
+"PO-Revision-Date: 2019-01-23 04:23+0300\n"
+"Last-Translator: Alexandre Prokoudine <alexandre.prokoudine@gmail.com>\n"
+"Language-Team: русский <gnome-cyr@lists.gnome.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: UTF-8\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2); 10<=4 && (n%100<10 || n%"
-"100>=20) ? 1 : 2);\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
+"X-Generator: Gtranslator 3.31.0\n"
 
-#: ../src/interface.c:109 ../src/main.c:125 ../src/main.c:130
+#: ../src/interface.c:109 ../src/main.c:130
 msgid "Deskew"
 msgstr "Выровнять перекос скана"
 
@@ -85,6 +87,11 @@ msgstr "Слои:"
 msgid "RGB Images:"
 msgstr "Изображения RGB:"
 
-#: ../src/main.c:126
-msgid "Auto-straighten (deskew) the image"
+#: ../src/main.c:125
+msgid "Automatically straighten the rotated image"
 msgstr "Автоматически выровнять перекос в отсканированном изображении"
+
+#: ../src/main.c:126
+msgid "This plug-in automatically straightens (deskews) rotated images"
+msgstr ""
+"Этот плагин автоматически выровнивает перекос в отсканированном изображении"
