--- a/po/es.po
+++ b/po/es.po
@@ -1,9 +1,8 @@
-# SOME DESCRIPTIVE TITLE.
+# GIMP deskew plugin 1.1
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# Александр Прокудин <alexandre.prokoudine@gmail.com>, 2010.
-# Alexandre Prokoudine <alexandre.prokoudine@gmail.com>, 2019.
+# Alberto Fanjul <albertofanjul@gmail.com>, 2023
 #
 msgid ""
 msgstr ""
@@ -11,14 +10,13 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-23 04:23+0300\n"
 "PO-Revision-Date: 2019-01-23 04:23+0300\n"
-"Last-Translator: Alexandre Prokoudine <alexandre.prokoudine@gmail.com>\n"
-"Language-Team: русский <gnome-cyr@lists.gnome.org>\n"
-"Language: ru\n"
+"Last-Translator: Alberto Fanjul <albertofanjul@gmail.com>\n"
+"Language-Team: Spanish - Spain <gnome-es-list@gnome.org>\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Gtranslator 3.31.0\n"
 
 #: ../src/interface.c:109 ../src/main.c:130
