--- a/README
+++ b/README
@@ -1,32 +1,11 @@
-This is original deskew plug-in for GIMP written by Karl Chen back in 2007. 
-The plugin's homepage has been offline for a very long time, and the 
-plug-in needed some fixes. So I went ahead and saved it from 
-http://ccux-linux.de/pdb/index.php?pdetail=6271 where an src.rpm still had the 
-original tarball.
-
-Below goes slightly adjusted original contents of README.
-
-GIMP Deskew Plug-In
-===================
-
-Copyright (C) 2007 Karl Chen <quarl@cs.berkeley.edu>
-
-http://www.cubewano.org/gimp-deskew-plugin/
-
-Distributed under GPL v2+ (see COPYING).
-
-Uses Radon skew detection algorithm and code from the PageTools project
-(http://sourceforge.net/projects/pagetools).  kale4@users.sourceforge.net,
-yet@users.sourceforge.net.
-
+Deskew is a simple plugin to fix skewed scanned documents.
 
 Usage
 =====
 
 Click Layer => Transform => Deskew.
 
-Gimp will auto-straighten ("deskew") the image.
-
+The plugin has no options. GIMP will simply auto-straighten ("deskew") the image.
 
 Installation
 ============
@@ -47,3 +26,16 @@ If you got a tarball with a version,
 
 For both ./autogen.sh and ./configure you can use --prefix=INSTALL_PATH, where 
 a typical installation path is /usr. By default /usr/local is used.
+
+Copyrights
+==========
+
+Original developers: 2007 Karl Chen <quarl@cs.berkeley.edu>
+
+Additional code changes: Aleksandr Prokudin, Máirín Duffy, Freso, Alexander Dorokhine.
+
+Distributed under GPL v2+ (see COPYING).
+
+Uses Radon skew detection algorithm and code from the PageTools project
+(http://sourceforge.net/projects/pagetools).  kale4@users.sourceforge.net,
+yet@users.sourceforge.net.
